--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -20,16 +20,15 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #740505;
-  color: #fff;
+  background: var(--secondary-color);
+  color: var(--font-color1);
   padding: 1rem;
   position: relative;
 }
-
 .logo {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: 90px;
+  height: 100px;
+  border-radius: 10px;
   margin-right: 0.5rem;
 }
 
@@ -42,7 +41,7 @@ header {
 .hamburger {
   background: none;
   border: none;
-  color: #fff;
+  color: var(--font-color1);
   font-size: 2rem;
   cursor: pointer;
   z-index: 1001;
@@ -153,8 +152,8 @@ h1, h2 {
   text-align: center;
 }
 .member-card img {
-  width: 80px;
-  height: 80px;
+  width: 100%;
+  height: 50%;
   border-radius: 8px;
   object-fit: cover;
 }
